# banchi

./: .env.sample  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose-production.yml  docker-compose-staging.yml  docker-compose.yml  pyproject.toml
banchi/api/: __init__.py
banchi/api/clients/: rezource.py
banchi/api/core/: config.py  deps.py  security.py
banchi/api/models/: __init__.py  account_books.py  accounts.py  spaces.py  (+2 more)
banchi/cmd/: api.py  web.py  worker_rq.py
banchi/web/: __init__.py  banchi_api_clients.py  default_settings.py
banchi/worker/: __init__.py  redis_rq.py  server.py  worker_rq.py
banchiapi/: .env.example  Dockerfile  pyproject.toml
banchiapi/banchiapi/: __init__.py
banchiapi/banchiapi/api/: __init__.py
banchiapi/banchiapi/api/v1/: account_books.py  accounts.py  authentication.py  divisions.py  organizations.py  space_roles.py  spaces.py  system_settings.py  transactions.py  users.py
banchiapi/banchiapi/core/: config.py  deps.py  security.py
banchiapi/banchiapi/core/settings/: app.py  base.py  development.py  production.py  test.py
banchiapi/banchiapi/core/tasks/: water_supply.py
banchiapi/banchiapi/models/: __init__.py  account_books.py  accounts.py  spaces.py  transactions.py  users.py
banchiapi/banchiapi/schemas/: __init__.py  account_books.py  accounts.py  base.py  bases.py  organizations.py  spaces.py  system_settings.py  transactions.py  users.py
banchiapi/banchiapi/worker/: __init__.py  redis_rq.py  server.py  worker_rq.py
banchiapi/scripts/: init_admin.py  run-api  run-dev  run-worker
clients/: generate-client
clients/banchi-client/: README.md  pyproject.toml
clients/config/: banchi-client-generator.yml
frontend/: .env_sample  .gitignore  Dockerfile  pyproject.toml
frontend-flet/: pyproject.toml
frontend-flet/banchiapp/: app.py
frontend-flet/scripts/: run-web  run-web-develop
frontend/banchi/: default_settings.py
frontend/banchi/cmd/: web.py
frontend/banchi/web/: __init__.py  acl.py  banchi_api_clients.py  oauth2.py
frontend/banchi/web/forms/: __init__.py  account_books.py  accounts.py  spaces.py  transactions.py  users.py
frontend/banchi/web/models/: users.py
frontend/banchi/web/static/: package-lock.json  package.json
frontend/banchi/web/templates/account_books/: add-or-edit-transaction.html  add-transaction.html  create-or-edit.html  index.html  view.html
frontend/banchi/web/templates/accounts/: create-or-edit.html  index.html  login.html  view.html
frontend/banchi/web/templates/admin/: index.html
frontend/banchi/web/templates/admin/users/: add-or-edit.html  index.html
frontend/banchi/web/templates/base/: banner.html  base-layout.html  cooke-banner.html  default-dashboard.html  default-page.html  footer.html  html-renderer.html  organization-renderer.html  toolbar-dashboard.html  toolbar.html
frontend/banchi/web/templates/base/coe/: banner.html  footer.html  toolbar.html
frontend/banchi/web/templates/base/diis/: banner.html  footer.html  toolbar.html
frontend/banchi/web/templates/dashboard/: endorsements.html  index-admin.html  index-endorser.html  index-user.html
frontend/banchi/web/templates/spaces/: add-or-edit-role.html  edit-profile.html  index.html  list-roles.html  view.html
frontend/banchi/web/templates/users/: index.html  login.html
frontend/banchi/web/utils/: __init__.py  account_books.py
frontend/banchi/web/views/: account_books.py  accounts.py  dashboard.py  sites.py  spaces.py  users.py
frontend/banchi/web/views/admin/: __init__.py
frontend/clients/banchi-client/banchi_client/api/v1/: authentication_v1_auth_login_post.py  create_system_setting_v1_system_settings_create_post.py  create_v1_account_books_create_post.py  create_v1_users_create_post.py  delete_v1_account_books_account_book_id_delete_delete.py  delete_v1_transactions_transaction_id_delete_delete.py  get_all_v1_account_books_get.py  get_all_v1_spaces_get.py  get_me_check_password_v1_users_me_check_password_get.py  login_for_access_token_v1_auth_token_post.py  set_space_v1_users_user_id_set_space_put.py  set_status_v1_users_user_id_set_status_put.py
frontend/clients/banchi-client/banchi_client/models/: account_book.py  account_book_balance.py  account_book_label.py  account_book_list.py  account_type_enum.py  body_login_for_access_token_v1_auth_token_post.py  created_account.py  created_account_book.py  created_transaction.py  reference_account_book.py  reference_user.py  transaction.py  transaction_list.py  updated_transaction.py  user.py
frontend/scripts/: format.sh  nginx.conf  run-web
scripts/: run-api  run-balance-check.py  run-balance.py  run-summary.py  run-web  run-worker  test_beanie.py
(+238 files in other folders)
