[tool.poetry]
name = "banchi"
version = "0.1.0"
description = ""
authors = ["R202"]

[tool.poetry.dependencies]
python = "^3.11"
flask-caching = "^2.0.2"
authlib = "^1.2.0"
flask-wtf = "^1.1.1"
flask = "^3.0.0"
flask-login = {git = "https://github.com/maxcountryman/flask-login.git"}
fastapi = "^0.109.2"
black = "^24.2.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.1"


[tool.poetry.dev-dependencies]
watchdog = "^2.1.3"

[tool.poetry.scripts]
banchi-web = "banchi.cmd.web:main"
# banchi-api = "banchi.cmd.api:main"
banchai-worker = "banchiapi.worker.worker_rq:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
