[tool.poetry]
name = "banchi"
version = "0.1.0"
description = ""
authors = ["R202"]

[tool.poetry.dependencies]
python = "^3.11"
flask-caching = "^2.0.2"
authlib = "^1.3.2"
flask-wtf = "^1.1.1"
flask = "^3.0.3"
black = "^24.2.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.1"
loguru = "^0.7.2"
pydantic-settings = "^2.2.1"
redis = "^5.0.7"
rq = "^1.16.2"
beanie = "^2.0.0"
pydantic = {extras = ["email"], version = "^2.11.9"}
python-jose = "^3.3.0"
python-multipart = "^0.0.20"
flask-login = "^0.6.3"
openapi-python-client = "^0.24.3"
fastapi = "^0.118.0"
requests = "^2.32.3"
banchi-client = {path = "clients/banchi-client"}
bcrypt = "^4.2.1"
flask-htmx = "^0.4.0"
livereload = "^2.7.1"
jinja2-fragments = "^1.9.0"
libpass = "^1.9.1.post0"
fastapi-cli = "^0.0.8"


[tool.poetry.group.dev.dependencies]
watchdog = "^2.1.3"

[tool.poetry.scripts]
banchi-web = "banchi.cmd.web:main"
# banchi-api = "banchi.cmd.api:main"
banchai-worker = "banchiapi.worker.worker_rq:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
