[tool.poetry]
name = "banchiapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
beanie = "^1.21.0"
uvicorn = "^0.23.2"
loguru = "^0.7.0"
pydantic-settings = "^2.0.3"
redis = "^5.0.0"
rq = "^1.15.1"
email-validator = "^2.0.0.post2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
mongoengine = "^0.27.0"
pydantic = "^2.4.2"

[tool.poetry.scripts]
banchai-worker = "banchiapi.worker.worker_rq:main"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
