[tool.poetry]
name = "banchi"
version = "0.1.0"
description = ""
authors = ["R202"]

[tool.poetry.dependencies]
python = "^3.11"
flask-caching = "^2.0.2"
authlib = "^1.2.0"
flask-wtf = "^1.1.1"
flask-me = "^1.0.2"
flask = "^3.0.0"
flask-login = {git = "https://github.com/maxcountryman/flask-login.git"}


[tool.poetry.dev-dependencies]
black = "^21.7b0"
watchdog = "^2.1.3"

[tool.poetry.scripts]
banchi-web = "banchi.cmd.web:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
